--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,19 @@
 <html>
     <head>
-        <title>My Webpage</title>
+        <title>Mobile Eye</title>
     </head>
     <body>
-        Hello World! Glad to be here. TQ is with me here. TQ on her phone
+        <div class="menu">
+            <div>
+                logo
+            </div>
+            <div class="menu_items">
+                <div><p>About Us</p></div>
+                <div><p>Our Technology</p></div>
+                <div><p>Future of Mobility</p></div>
+                <div><p>Newsroom</p></div>
+                <div><p>Fleets</p></div>
+            </div>
+        </div>
     </body>
 </html>
